move jowi_cameraview

--- a/MC3_Mathopia/Question1.rcproject/com.apple.RCFoundation.Project
+++ b/MC3_Mathopia/Question1.rcproject/com.apple.RCFoundation.Project
@@ -24,7 +24,8 @@
                   "4A213441-135C-450E-8EF8-1A4EAB267C1D" : null,
                   "7F5F1ADC-E5E4-4EF5-A5B5-FC43B071FFA5" : null,
                   "632E476F-1E55-4E30-9723-1C51DD2E8B89" : null,
-                  "25205A22-ACAE-4AE2-ACED-790A4E1AA5DA" : {
+                  "B91C7CA3-4AB1-4253-9A84-07383168A8A8" : null,
+                  "EC110911-0EB7-4626-9505-E4B7E1BB0933" : {
                     "overrides" : {
                       "children" : {
                         "USDScene" : {
@@ -68,7 +69,7 @@
                                 "RuntimeIdentifier",
                                 {
                                   "typeName" : "UUID",
-                                  "value" : "DA965360-04B5-4709-8608-B7AA7AFD69A4"
+                                  "value" : "BFD3E0ED-6501-42DE-99EF-2CE382B2C6A6"
                                 }
                               ]
                             ]
@@ -104,40 +105,39 @@
                           "RuntimeIdentifier",
                           {
                             "typeName" : "UUID",
-                            "value" : "DBE54225-9B8D-4FC9-86F9-2E6AB97C7826"
+                            "value" : "9F9FC227-3094-424F-A185-186C1A573A3A"
                           }
                         ],
                         [
                           "entityName",
                           {
                             "typeName" : "String",
-                            "value" : "Question 1"
+                            "value" : "Question1"
                           }
                         ]
                       ]
                     },
                     "transform" : {
                       "matrix" : [
-                        0.08585675060749054,
+                        0.098047152161598206,
                         0,
                         0,
                         0,
                         0,
-                        0.08585675060749054,
+                        0.098047152161598206,
                         0,
                         0,
                         0,
                         0,
-                        0.08585675060749054,
+                        0.098047152161598206,
                         0,
-                        0,
-                        0,
-                        0,
+                        -0.29486167430877686,
+                        0.0017143450677394867,
+                        0.0086436271667480469,
                         1
                       ]
                     }
-                  },
-                  "B91C7CA3-4AB1-4253-9A84-07383168A8A8" : null
+                  }
                 },
                 "factory" : null,
                 "runtimeAttributes" : [
@@ -154,21 +154,21 @@
               "title" : "Box",
               "viewTransform" : {
                 "cameraTransform" : [
-                  0.99999994039535522,
+                  0.99969905614852905,
+                  -1.4130800696232626e-11,
+                  -0.024530556052923203,
                   0,
+                  -0.013621692545711994,
+                  0.83165347576141357,
+                  -0.55512779951095581,
                   0,
+                  0.020400920882821083,
+                  0.55529487133026123,
+                  0.83140325546264648,
                   0,
-                  0,
-                  0.8075486421585083,
-                  -0.58980107307434082,
-                  0,
-                  0,
-                  0.58980107307434082,
-                  0.8075486421585083,
-                  0,
-                  0,
-                  1.135667085647583,
-                  1.5549418926239014,
+                  0.55761522054672241,
+                  3.5581555366516113,
+                  4.6963529586791992,
                   1
                 ],
                 "sceneTransform" : [
